k8s/nginx/destination-rule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx
  namespace: frontend
spec:
  host: nginx.frontend.svc.cluster.local  # Nome completo do serviço
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
