k8s/nginx/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
  namespace: frontend
spec:
  hosts:
  - "*"  # Permite qualquer host (192.168.49.240)
  gateways:
  - istio-system/ingress-gateway  # Referência ao Gateway criado acima
  http:
  - match:
    - uri:
        prefix: /frontend/nginx
    rewrite:
      uri: "/"  # Remove o prefixo antes de encaminhar para o serviço interno
    route:
    - destination:
        host: nginx.frontend.svc.cluster.local  # Nome completo do serviço no namespace frontend
        port:
          number: 80
